<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.team.details.TeamDetailsFragment"
    android:orientation="vertical">

    <TextView
        style="@style/Headline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_info"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/coach_image_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/coach_image"
            android:background="@drawable/round_image">
        </ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/coach_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="14sp"
                android:textColor="@color/dark_gray"
                android:lineSpacingExtra="2sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/coach_country_image_view"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:contentDescription="@string/coach_image"
                    android:background="@drawable/round_image">
                </ImageView>

                <TextView
                    android:id="@+id/coach_country_name_text_view"
                    style="@style/Assistive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <LinearLayout
            android:id="@+id/left_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/right_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_team"
                android:contentDescription="@string/team_info">
            </ImageView>

            <TextView
                android:id="@+id/team_players_count_text_view"
                style="@style/Headline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_bg_dark" />

            <TextView
                style="@style/Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_players"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/left_layout"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            app:layout_constraintWidth_percent="0.5">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_progress_bar"
                android:contentDescription="@string/foreign_players">
            </ImageView>

            <TextView
                android:id="@+id/foreign_players_count_text_view"
                style="@style/Headline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_bg_dark" />

            <TextView
                style="@style/Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foreign_players"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        style="@style/Headline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tournaments"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tournaments_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray">
    </View>

    <TextView
        style="@style/Headline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/venue"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            style="@style/Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stadium"
            android:textColor="@color/dark_gray"/>

        <TextView
            android:id="@+id/stadium_text_view"
            style="@style/Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/dark_gray"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray">
    </View>

    <TextView
        style="@style/Headline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_match"
        android:textColor="@color/dark_gray"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textAlignment="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tournament_title_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/tournament_logo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_football"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            android:contentDescription="Tournament logo" />

        <TextView
            android:id="@+id/country_name"
            style="@style/Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tournament_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/pointer_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pointer_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/country_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/tournament_name"
            style="@style/Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NFL"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/pointer_right"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/next_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="4dp"
        android:paddingTop="10dp"
        android:paddingEnd="4dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/start_time"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/over_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/over_time"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_time"
            app:layout_constraintVertical_bias="0.5" />

        <View
            android:id="@+id/line"
            android:layout_height="50dp"
            android:layout_width="2dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/start_time"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
        </View>

        <ImageView
            android:id="@+id/logo_team_1"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_football"
            app:layout_constraintBottom_toTopOf="@+id/logo_team_2"
            app:layout_constraintStart_toEndOf="@id/line"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:id="@+id/logo_team_2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_football"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/line"
            app:layout_constraintTop_toBottomOf="@+id/logo_team_1"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/title_team_1"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/title_team_2"
            app:layout_constraintStart_toEndOf="@id/logo_team_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/title_team_2"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/logo_team_2"
            app:layout_constraintTop_toBottomOf="@+id/title_team_1"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>